--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -31,8 +31,8 @@
         android:id="@+id/floatingActionsLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="-295dp">
+        tools:layout_editor_absoluteX="48dp"
+        tools:layout_editor_absoluteY="-70dp">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/refreshh"
@@ -105,7 +105,7 @@
             app:layout_constraintTop_toTopOf="@+id/carlist" />
 
         <TextView
-            android:id="@+id/logoutTextView"
+            android:id="@+id/refreshtTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
