--- a/app/src/main/res/layout/cardview_car_large.xml
+++ b/app/src/main/res/layout/cardview_car_large.xml
@@ -93,7 +93,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
-                android:text="XX km away"
+                android:text=""
                 android:textAllCaps="true"
                 android:textSize="26sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -120,7 +120,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/lbldiscript"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="20dp"
@@ -134,24 +134,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtModel"
                 app:layout_constraintVertical_bias="0.0" />
 
-            <TextView
-                android:id="@+id/txtAvaliable"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Available: "
-                android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:layout_constraintVertical_bias="0.0" />
-
             <Button
                 android:id="@+id/btnrent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="44dp"
                 android:text="Rent car"
                 android:textSize="26sp"
                 app:layout_constraintBottom_toBottomOf="parent"
