--- a/app/src/main/res/layout/legend_layout.xml
+++ b/app/src/main/res/layout/legend_layout.xml
@@ -39,6 +39,15 @@
         app:layout_constraintTop_toBottomOf="@+id/img_Car_Img" />
 
     <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="27dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/rentedcar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
+    <ImageView
         android:id="@+id/imageView3"
         android:layout_width="27dp"
         android:layout_height="48dp"
@@ -87,4 +96,14 @@
         app:layout_constraintStart_toEndOf="@+id/img_Car_Img"
         app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="252dp"
+        android:text="Your Rented Car"
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
