--- a/app/src/main/res/drawable/chat_bubble_self.xml
+++ b/app/src/main/res/drawable/chat_bubble_self.xml
@@ -4,5 +4,5 @@
     <corners android:bottomRightRadius="18dp"
         android:bottomLeftRadius="18dp"
         android:topLeftRadius="18dp" />
-    <solid android:color="@color/colorPrimaryDark"/>
+    <solid android:color="@android:color/white"/>
 </shape>
