--- a/app/src/main/res/layout/activity_watch_video.xml
+++ b/app/src/main/res/layout/activity_watch_video.xml
@@ -8,7 +8,7 @@
 
     <VideoView
         android:id="@+id/vioPlaytMe"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
